tests/fail/missing_arguments.rs
#[log_attributes::log()]
fn missing_arguments() {}

fn main() {}
